--- a/index.html
+++ b/index.html
@@ -2,14 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Rohan's Engineering Portfolio</title>
+  <title>Rohan Shrivastava — Engineering Portfolio</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      line-height: 1.6;
+    }
+
+    h1, h2 {
+      color: #ffffff;
+    }
+
+    a {
+      color: #4da6ff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .section {
+      margin-bottom: 40px;
+      max-width: 800px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hi, I'm Rohan Shrivastava</h1>
-  <p>Welcome to my engineering portfolio. Check out my projects below:</p>
-  <ul>
-    <li><a href="projects/project1.html">Walking Robot</a></li>
-    <li><a href="projects/project2.html">Haptic Glove</a></li>
-  </ul>
+
+  <div class="section">
+    <h1>Rohan Shrivastava — Engineering Portfolio</h1>
+  </div>
+
+  <div class="section">
+    <h2>About Me</h2>
+    <p>
+      I am an Electrical and Computer Engineering student with a passion  for
+      robotics, embedded systems, and analog circuits. I enjoy building
+      real-world systems from scratch — from PCB design and CAD modeling to firmware
+      and system integration.
+    </p>
+    <p>
+    </p>
+  </div>
+
+  <div class="section">
+    <h2> Projects</h2>
+    <ul>
+      <li><a href="projects/redstone-ic/index.html">Redstone IC Project</a></li>
+      <li><a href="projects/igvc/index.html">IGVC Projects</a></li>
+      <li><a href="projects/ru-hart/index.html">RU HART Robotics</a></li>
+    </ul>
+  </div>
+
 </body>
 </html>
