--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <ul>
       <li><a href="projects/redstone-ic/index.html">Redstone IC Project</a></li>
       <li><a href="projects/igvc/index.html">IGVC Projects</a></li>
-      <li><a href="projects/ru-hart/index.html">RU HART Robotics</a></li>
+      <li><a href="projects/ru-hart/index.html">RU HART</a></li>
     </ul>
   </div>
 
