--- a/projects/igvc/index.html
+++ b/projects/igvc/index.html
@@ -1,5 +1,5 @@
 <h1>IGVC Projects</h1>
 <ul>
   <li><a href="remote-controller.html">Remote Controller</a></li>
-  <li><a href="Estop-redesign.html">E-Stop Remote</a></li>
+  <li><a href="estop.html">E-Stop Remote</a></li>
 </ul>
