--- a/projects/ru-hart/index.html
+++ b/projects/ru-hart/index.html
@@ -1,4 +1,4 @@
-<h1>RU HART Robotics</h1>
+<h1>ru-hart</h1>
 <ul>
   <li><a href="ai-navigation.html">AI Navigation Robot</a></li>
   <li><a href="food-delivery.html">Food Delivery Robot</a></li>
