--- a/projects/redstone-ic/parts/Redstone_wire.html
+++ b/projects/redstone-ic/parts/Redstone_wire.html
@@ -1,6 +1,7 @@
 <h1>Redstone Wire</h1>
 
 <h2>Version 1</h2>
+<P> Note: Redstone wire doesn't functione exactly How it does in game but shows it main feature of signal propogation around the wire</P>
 
 <h3>Description</h3>
 <p>Shows redstone components signal traveling across the wire and stays on for as long as the signal is on.</p>
@@ -35,4 +36,6 @@
 <h3>Future Improvements</h3>
 <ul>
   <li>Redstone wire LEDs dim  with the more redstone wire components to it or the longer the line streches for, like in real minecraft</li>
+  <li>Replacing LEDS with non addressing led Strips </li>
+  <li> Cad model more remsembles redstone wire</li>
 </ul>
