Update and rename projects/redstone-ic/parts/redstone_wire.html to parts/redstone_wire.html

--- a/parts/redstone_wire.html
+++ b/parts/redstone_wire.html
@@ -1,7 +1,7 @@
 <h1>Redstone Wire</h1>
 
 <h2>Version 1</h2>
-<P> Note: Redstone wire doesn't functione exactly How it does in game but shows it main feature of signal propogation around the wire</P>
+<P> Note: Redstone wire doesn't function exactly How it does in game but shows it main feature of signal propogation around the wire</P>
 
 <h3>Description</h3>
 <p>Shows redstone components signal traveling across the wire and stays on for as long as the signal is on.</p>
