--- a/projects/redstone-ic/index.html
+++ b/projects/redstone-ic/index.html
@@ -5,14 +5,14 @@
 <h2>Parts</h2>
 <ul>
   <li><a href="/parts/redstone_wire.html">Redstone Wire</a></li>
-  <li><a href="parts/block.html">Redstone Block</a></li>
-  <li><a href="parts/repeater.html">Redstone Repeater</a></li>
-  <li><a href="parts/copper-bulb.html">Copper Bulb</a></li>
-  <li><a href="parts/note-block.html">Note Block</a></li>
-  <li><a href="parts/lever.html">Lever</a></li>
-  <li><a href="parts/button.html">Button</a></li>
-  <li><a href="parts/weighted-pressure-plate.html">Weighted Pressure Plate</a></li>
-  <li><a href="parts/pressure-plate.html">Pressure Plate</a></li>
+  <li><a href="/parts/block.html">Redstone Block</a></li>
+  <li><a href="/parts/repeater.html">Redstone Repeater</a></li>
+  <li><a href="/parts/copper-bulb.html">Copper Bulb</a></li>
+  <li><a href="/parts/note-block.html">Note Block</a></li>
+  <li><a href="/parts/lever.html">Lever</a></li>
+  <li><a href="/parts/button.html">Button</a></li>
+  <li><a href="/parts/weighted-pressure-plate.html">Weighted Pressure Plate</a></li>
+  <li><a href="/parts/pressure-plate.html">Pressure Plate</a></li>
 </ul>
 
 <h2>Coming Soon</h2>
