--- a/projects/redstone-ic/parts/redstone_wire.html
+++ b/projects/redstone-ic/parts/redstone_wire.html
@@ -1,5 +1,8 @@
-<h1>Redstone Wire</h1>
-
+<h1><a href="/projects/redstone-ic/index.html">Redstone IC Project</a></h1>
+<hr>
+<br>
+<br>
+<h2>Redstone Wire<h2>
 <h2>Version 1</h2>
 <P> Note: Redstone wire doesn't function exactly How it does in game but shows it main feature of signal propogation around the wire</P>
 
@@ -36,6 +39,6 @@
 <h3>Future Improvements</h3>
 <ul>
   <li>Redstone wire LEDs dim  with the more redstone wire components to it or the longer the line streches for, like in real minecraft</li>
-  <li>Replacing LEDS with non addressing led Strips </li>
+  <li>Replacing LEDS with non-addressing LED strips </li>
   <li> Cad model more remsembles redstone wire</li>
 </ul>
