--- a/projects/redstone-ic/parts/redstone_wire.html
+++ b/projects/redstone-ic/parts/redstone_wire.html
@@ -1,8 +1,8 @@
-<h1><a href="/projects/redstone-ic/index.html">Redstone IC Project</a></h1>
+
+<h1><a href="../index.html">Redstone IC Project</a></h1>
 <hr>
 <br>
-<br>
-<h2>Redstone Wire<h2>
+<h2><b>Redstone Wire</b><h2>
 <h2>Version 1</h2>
 <P> Note: Redstone wire doesn't function exactly How it does in game but shows it main feature of signal propogation around the wire</P>
 
