--- a/projects/redstone-ic/parts/redstone_wire.html
+++ b/projects/redstone-ic/parts/redstone_wire.html
@@ -1,5 +1,5 @@
 
-<h1><a href="../index.html">Redstone IC Project</a></h1>
+<h1><a href="/../index.html">Redstone IC Project</a></h1>
 <hr>
 <br>
 <h2><b>Redstone Wire</b><h2>
