--- a/projects/redstone-ic/index.html
+++ b/projects/redstone-ic/index.html
@@ -1,6 +1,7 @@
 <h1>Redstone IC Project</h1>
 
 <p><strong>Goal:</strong> Create real-world electronic equivalents of Minecraft Redstone components.</p>
+<video control src="Demo video.mp4">
 
 <h2>Parts</h2>
 <ul>
