--- a/projects/redstone-ic/index.html
+++ b/projects/redstone-ic/index.html
@@ -1,7 +1,7 @@
 <h1>Redstone IC Project</h1>
 
 <p><strong>Goal:</strong> Create real-world electronic equivalents of Minecraft Redstone components.</p>
-<video control src="Demo video.mp4">
+<video control src="Demo video.mp4" width="500">
 
 <h2>Parts</h2>
 <ul>
