--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <div class="container">
 
-    <h1>My Engineering Portfolio</h1>
+    <h1>Engineering Portfolio</h1>
     <p>Rohan Shrivastava — Electrical & Computer Engineering</p>
 
     <h2>About Me</h2>
