--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Rohan Shrivastava — Engineering Portfolio</title>
+  <title>Engineering Portfolio</title>
   <style>
     body {
       background-color: #000;
@@ -49,6 +49,10 @@
     a:hover {
       text-decoration: underline;
     }
+
+    .contact p {
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
@@ -60,10 +64,8 @@
 
     <h2>About Me</h2>
     <p>
-      I am an Electrical and Computer Engineering student with a passion for
-      robotics, embedded systems, and analog circuits. I enjoy building
-      real-world systems from scratch — from PCB design and CAD modeling to firmware
-      and system integration.
+      I am an Electrical and Computer Engineering student at Rutgers Unviersity New-Brunswick with a focus in
+      robotics, embedded systems, and analog circuity.
     </p>
 
     <h2>Projects</h2>
@@ -71,8 +73,7 @@
     <div class="project">
       <p><strong>Minecraft Redstone IC Project</strong></p>
       <p>
-        Goal to replicate Minecraft redstone using real analog and digital circuitry,
-        translating in-game logic into physical electronic systems.
+        Goal to replicate Minecraft redstone using analog and digital circuitry
       </p>
       <a href="projects/redstone-ic/index.html">View Project →</a>
     </div>
@@ -93,6 +94,13 @@
         embedded control, safety systems, and system integration.
       </p>
       <a href="projects/ru-hart/index.html">View Project →</a>
+    </div>
+
+    <h2>Contact</h2>
+    <div class="contact">
+      <p>Email: <a href="mailto:srohanshri@gmail.com">srohanshri@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/rohan-shrivastava456" target="_blank">
+        linkedin.com/in/rohan-shrivastava456</a></p>
     </div>
 
   </div>
