--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="section-text">
       <p>
         I am an Electrical and Computer Engineering student at Rutgers University New-Brunswick with a focus in
-        robotics, embedded systems, and analog circuitry.
+        Robotics, Embedded systems, and Analog circuitry.
       </p>
     </div>
 
