--- a/projects/igvc/index.html
+++ b/projects/igvc/index.html
@@ -1,5 +1,89 @@
-<h1>IGVC Projects</h1>
-<ul>
-  <li><a href="remote-controller.html">Remote Controller</a></li>
-  <li><a href="estop.html">E-Stop Remote</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>IGVC Projects</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+    }
+
+    .header {
+      padding: 30px 20px;
+      border-bottom: 1px solid #333;
+      position: relative;
+      text-align: center;
+      background-color: #000;
+    }
+
+    .back {
+      position: absolute;
+      left: 20px;
+      top: 30px;
+    }
+
+    .back a {
+      color: #4da6ff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .back a:hover {
+      text-decoration: underline;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 2.2em;
+      color: #fff;
+    }
+
+    .content {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      text-align: left;
+      background-color: #000;
+    }
+
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+
+    li {
+      margin: 12px 0;
+    }
+
+    a {
+      color: #4da6ff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="header">
+    <div class="back">
+      <a href="../index.html">← Back</a>
+    </div>
+    <h1>IGVC Projects</h1>
+  </div>
+
+  <div class="content">
+    <ul>
+      <li><a href="remote-controller.html">Remote Controller</a></li>
+      <li><a href="estop.html">E-Stop Remote</a></li>
+    </ul>
+  </div>
+
+</body>
+</html>
