--- a/projects/igvc/index.html
+++ b/projects/igvc/index.html
@@ -73,7 +73,7 @@
 
   <div class="header">
     <div class="back">
-      <a href="Rohan578-.github.io/index.html">← Back</a>
+      <a href="https://rohan578-.github.io/">← Back</a>
     </div>
     <h1>IGVC Projects</h1>
   </div>
