--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </div>
 
     <div class="project">
-      <p><strong>IGVC Projects (Rutgers)</strong></p>
+      <p><strong>IGVC Projects</strong></p>
       <p><strong>Goal:</strong> Develop an emergency stop (E-Stop) remote and a custom wireless remote
         controller for the Rutgers Intelligent Ground Vehicle Competition team.</p>
       <a href="projects/igvc/index.html">View Project →</a>
     </div>
 
     <div class="project">
-      <p><strong>RU HART Robotics</strong></p>
+      <p><strong>RU HART</strong></p>
       <p><strong>Goal:</strong> Develop an autonomous food delivery robot for Rutgers, focusing on
         embedded control, safety systems, and system integration.</p>
       <a href="projects/ru-hart/index.html">View Project →</a>
