--- a/projects/redstone-ic/index.html
+++ b/projects/redstone-ic/index.html
@@ -1,26 +1,124 @@
-<h1>Redstone IC Project</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Redstone IC Project</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+    }
 
-<p><strong>Goal:</strong> Create real-world electronic equivalents of Minecraft Redstone components.</p>
-<video control src="Demo video.mp4">
+    .header {
+      padding: 30px 20px;
+      border-bottom: 1px solid #333;
+      position: relative;
+      text-align: center;
+      background-color: #000;
+    }
 
-<h2>Parts</h2>
-<ul>
-  <li><a href="/parts/redstone_wire.html">Redstone Wire</a></li>
-  <li><a href="/parts/block.html">Redstone Block</a></li>
-  <li><a href="/parts/repeater.html">Redstone Repeater</a></li>
-  <li><a href="/parts/copper-bulb.html">Copper Bulb</a></li>
-  <li><a href="/parts/note-block.html">Note Block</a></li>
-  <li><a href="/parts/lever.html">Lever</a></li>
-  <li><a href="/parts/button.html">Button</a></li>
-  <li><a href="/parts/weighted-pressure-plate.html">Weighted Pressure Plate</a></li>
-  <li><a href="/parts/pressure-plate.html">Pressure Plate</a></li>
-</ul>
+    .back {
+      position: absolute;
+      left: 20px;
+      top: 30px;
+    }
 
-<h2>Coming Soon</h2>
-<ul>
-  <li>Piston</li>
-  <li>Jukebox</li>
-  <li>Sculk Sensor</li>
-  <li>Observer</li>
-  <li>Dispenser</li>
-</ul>
+    .back a {
+      color: #4da6ff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .back a:hover {
+      text-decoration: underline;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 2.2em;
+      color: #fff;
+    }
+
+    .content {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+      text-align: left;
+      background-color: #000;
+    }
+
+    h2 {
+      margin-top: 40px;
+      border-bottom: 1px solid #333;
+      padding-bottom: 6px;
+    }
+
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+
+    li {
+      margin: 10px 0;
+    }
+
+    a {
+      color: #4da6ff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    video {
+      display: block;
+      margin: 20px 0;
+      max-width: 100%;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="header">
+    <div class="back">
+      <a href="https://rohan578-.github.io/">← Back</a>
+    </div>
+    <h1>Redstone IC Project</h1>
+  </div>
+
+  <div class="content">
+
+    <p><strong>Goal:</strong> Create real-world electronic equivalents of Minecraft Redstone components.</p>
+
+    <video controls src="Demo video.mp4"></video>
+
+    <h2>Parts</h2>
+    <ul>
+      <li><a href="/parts/redstone_wire.html">Redstone Wire</a></li>
+      <li><a href="/parts/block.html">Redstone Block</a></li>
+      <li><a href="/parts/repeater.html">Redstone Repeater</a></li>
+      <li><a href="/parts/copper-bulb.html">Copper Bulb</a></li>
+      <li><a href="/parts/note-block.html">Note Block</a></li>
+      <li><a href="/parts/lever.html">Lever</a></li>
+      <li><a href="/parts/button.html">Button</a></li>
+      <li><a href="/parts/weighted-pressure-plate.html">Weighted Pressure Plate</a></li>
+      <li><a href="/parts/pressure-plate.html">Pressure Plate</a></li>
+    </ul>
+
+    <h2>Coming Soon</h2>
+    <ul>
+      <li>Piston</li>
+      <li>Jukebox</li>
+      <li>Sculk Sensor</li>
+      <li>Observer</li>
+      <li>Dispenser</li>
+    </ul>
+
+  </div>
+
+</body>
+</html>
